[tool.poetry]
name = "aioproxyline"
version = "1.1"
description = "Asynchronous wrapper to interact with proxyline.net API"
authors = ["Marple"]
readme = "README.md"
repository = "https://github.com/marple-git/aioproxyline"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
